--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.45.1",
+		"react-native-modal": "^2.4.0",
 		"react-native-scrollable-tab-view": "^0.6.6",
 		"react-native-tab-navigator": "^0.3.3",
 		"react-navigation": "^1.0.0-beta.11"
